--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /**
 Mi estilo CSS en GIT (2)
 */
-#indice .col-main .title:after{
-    content: "MODIFICADO POR GIT";
-    color: red;
+#indice .col-main .header .title:after{
+	content: "MODIFICADO POR GIT";
+	color: red;
 }
